# aunt-isara

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
auntisara/: ioc.py  isara.py  msgs.py  version.py
deploy/: init-template  isara.ui
opi/: robot.edl
